CNCS Dev 12/src/objects/Corporate_Program1__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_Recievables_Responsible__c</fullName>
        <label>Accounts Recievables Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corp_Code__c</fullName>
        <label>Corporate Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Director_ID__c</fullName>
        <formula>Director_last_name__r.Director_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Title__c</fullName>
        <formula>Director_last_name__r.Director_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_last_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Name</label>
        <referenceTo>Director__c</referenceTo>
        <relationshipName>Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excess_Amount_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excess Amount Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Director_last_name__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer_2_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Layer 2 code</label>
        <referenceTo>Layer_2__c</referenceTo>
        <relationshipName>Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Basis__c</fullName>
        <label>Legal Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line1__c</fullName>
        <label>Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line2__c</fullName>
        <label>Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_Approval_Workflow_Setup__c</fullName>
        <label>NOFA Approval Workflow Setup?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Corporate Program</label>
        <referenceTo>Corporate_Program1__c</referenceTo>
        <relationshipName>Corporate_Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Applicants_Allowed__c</fullName>
        <label>Sub Applicants Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Corporate Program</label>
        <referenceTo>Corporate_Program1__c</referenceTo>
        <relationshipName>Corporate_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Corporate Program1</label>
    <nameField>
        <label>Corporate Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Programs1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>